[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/spells and prefabs/ex bullet.gd" type="Script" id=1]
[ext_resource path="res://sprites/spells/zone.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="ex bullet" type="Node2D"]
z_index = -2
z_as_relative = false
script = ExtResource( 1 )

[node name="lifetime" type="Timer" parent="."]

[node name="Damage_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage_area"]
shape = SubResource( 1 )

[node name="Zone" type="Sprite" parent="Damage_area"]
modulate = Color( 1, 1, 1, 0.568627 )
position = Vector2( 2.38419e-07, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]
[connection signal="body_entered" from="Damage_area" to="." method="_on_Damage_area_body_entered"]
